--- a/fakta.html
+++ b/fakta.html
@@ -7,26 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-container title">
-        <div class="dropdown" style="margin-right:20px; float:left;">
-            <!-- <button class="dropbtn">MENU</button> -->
-            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-            </div>
+    <div class="top-container heading">
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <script src="script.js"></script>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a class="page-selected" href="fakta.html">Fakta</a>
+            <a href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a href="hasil-karya.html">Hasil Karya</a>
+            <a href="timeline.html">Timeline</a>
+            <a href="updates.html">Updates</a>
+            <a href="projects.html">Projects</a>
+            <div class="clearfix"></div>
         </div>
-        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
-        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
-        <font class="title" id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
+        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Fakta dan Informasi</b></div>
         <p>
         Fakta dan Informasi adalah halaman yang berisi fakta untuk informasi yang berguna untuk kedepannya. Seperti fakta, cerita, berita, dan pembahasan.
         </p>
@@ -62,27 +61,13 @@
         <div class="container2">
             <img src="fakta/openai-logo.jpg" alt="OpenAI" width="200">
         </div>
-        <br>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
-            <p>
-            Link halaman:<br>
-            <a href="index.html">Home</a> |
-            <a href="blog.html">Blog</a> |
-            <b>Fakta</b> |
-            <a href="profil.html">Profil</a> |
-            <a href="portofolio.html">Portofolio</a> |
-            <a href="about.html">About</a> |
-            Timeline (Coming Soon)
-            </p>
-        </div>
-        <br>
+        <br><br>
         <a class="button title" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 19 Sep 2023<br>
+        Terakhir diupdate: 26 Mei 2024<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
