--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="sidebar" id="sidebar"></div>
-		<script src="script.js"></script>
-        <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
-        <div class="column" style="padding-right:30px;">
-			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <script src="script.js"></script>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="fakta.html">Fakta</a>
+            <a href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a class="page-selected" href="hasil-karya.html">Hasil Karya</a>
+            <a href="timeline.html">Timeline</a>
+            <a href="updates.html">Updates</a>
+            <a href="projects.html">Projects</a>
+            <div class="clearfix"></div>
         </div>
-		<div class="column" style="padding-right:20px;">
-			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
-		</div>
-        <div style="font-size:30px; color:white; padding"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
 	<div class="container">
         <br>
@@ -186,23 +189,6 @@
         <br>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
-
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box heading">
-            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
-            <div class="btn-group">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-                <a class="selected">Hasil Karya</a>
-                <a href="timeline.html">Timeline</a>
-                <a href="updates.html">Updates</a>
-				<a href="projects.html">Projects</a>
-            </div>
-            <div class="clearfix"></div><br>
-        </div>
         <br>
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
