--- a/projects.html
+++ b/projects.html
@@ -17,18 +17,20 @@
             <div class="dropdown-content" id="boxlink"></div>
             <script src="script.js"></script>
         </div> -->
-        <div class="sidebar" id="sidebar"></div>
-		<script src="script.js"></script>
-        <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
-        <div class="column" style="padding-right:30px;">
-			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <script src="script.js"></script>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="fakta.html">Fakta</a>
+            <a href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a href="hasil-karya.html">Hasil Karya</a>
+            <a href="timeline.html">Timeline</a>
+            <a href="updates.html">Updates</a>
+            <a class="page-selected" href="projects.html">Projects</a>
+            <div class="clearfix"></div>
         </div>
-		<div class="column" style="padding-right:20px;">
-			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
-		</div>
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
-        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -128,8 +130,13 @@
             <a href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Belum ada)</a>
         </div>
 		<p class="heading" id="9" style="font-size: 25px"><b>10. Kalkulator Sederhana (v1.8.1)</b></p>
-        <div class="container2"><p><i>Coming Soon</i></p></div>
+        <div class="container2">
+            <p>Kalkulator Peluang<br>Bulan dibuat: Mei 2024</p>
+            <a href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana (Belum lengkap)</a>
+        </div>
 		<p class="heading" id="10" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
+        <div class="container2"><p><i>Coming Soon</i></p></div>
+        <p class="heading" id="10" style="font-size: 25px"><b>12. [Coming Soon] (v1.10)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
@@ -158,7 +165,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 7 Mar 2024<br>
+        Terakhir diupdate: 24 Mei 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
