--- a/timeline.html
+++ b/timeline.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="sidebar" id="sidebar"></div>
-		<script src="script.js"></script>
-        <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
-        <div class="column" style="padding-right:30px;">
-			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <script src="script.js"></script>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="fakta.html">Fakta</a>
+            <a href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a href="hasil-karya.html">Hasil Karya</a>
+            <a class="page-selected" href="timeline.html">Timeline</a>
+            <a href="updates.html">Updates</a>
+            <a href="projects.html">Projects</a>
+            <div class="clearfix"></div>
         </div>
-		<div class="column" style="padding-right:20px;">
-			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
-		</div>
-        <div style="font-size:30px; color:white; padding"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -68,35 +71,63 @@
         </div><br>
 
         <p class="heading" id="4" style="font-size: 25px"><b>4. Tahun 2022</b></p>
-		
-        <p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
-		
-		<p class="heading" id="6" style="font-size: 25px"><b>6. Tahun 2024</b></p>
-		<br><br>
-        
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box heading">
-            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
-            <div class="btn-group">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-                <a href="hasil-karya.html">Hasil Karya</a>
-                <a class="selected">Timeline</a>
-                <a href="updates.html">Updates</a>
-		        <a href="projects.html">Projects</a>
-            </div>
-            <div class="clearfix"></div><br>
+        <div class="container2">
+            <p>Pada tahun 2022 ini</p>
+            <ul>
+                <li>
+                    <b>Juli 2022</b><br>
+                    - Devan masuk sekolah kelas 8
+                </li><br>
+                <li>
+                    <b>November 2022</b><br>
+                    - Eagle Fest Pertama
+                </li>
+            </ul>
         </div><br>
 		
+        <p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
+        <div class="container2">
+            <p>Pada tahun 2023 ini</p>
+            <ul>
+                <li>
+                    <b>April 2023</b><br>
+                    - Pertama kali membuat website Devan di Github
+                </li>
+            </ul>
+        </div><br>
+		
+		<p class="heading" id="6" style="font-size: 25px"><b>6. Tahun 2024</b></p>
+		<div class="container2">
+            <p>Pada tahun 2024 ini</p>
+            <ul>
+                <li>
+                    <b>Januari 2024</b><br>
+                </li><br>
+                <li>
+                    <b>Februari 2024</b><br>
+                <li>
+                    <b>Maret 2024</b><br>
+                    - Memenangkan lomba UNY dengan peringkat 7<br>
+                    - Membuat hasil karya Produk Indonesia yang Mendunia di Canva
+                </li><br>
+                <li>
+                    <b>April 2024</b><br>
+                    - Peringkat 7 tingkat kota
+                </li><br>
+                <li>
+                    <b>Mei 2024</b><br>
+                    - Memenangkan lomba Short Movie dengan juara 1 di kota Semarang
+                </li>
+            </ul>
+        </div><br>
+
+        <br>
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 10 Mar 2024<br>
+        Terakhir diupdate: 26 Mei 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
