--- a/updates.html
+++ b/updates.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="dropdown" style="margin-right:20px; float:left;">
-            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content" id="boxlink"></div>
-            <script src="script.js"></script>
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <script src="script.js"></script>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="fakta.html">Fakta</a>
+            <a href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a href="hasil-karya.html">Hasil Karya</a>
+            <a href="timeline.html">Timeline</a>
+            <a class="page-selected" href="updates.html">Updates</a>
+            <a href="projects.html">Projects</a>
+            <div class="clearfix"></div>
         </div>
-        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -27,6 +33,7 @@
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
+            <a href="#9">Version 1.8</a> <span style="color:green">(Baru!)</span><br>
             <a href="#8">Version 1.7</a><br>
             <a href="#7">Version 1.6</a><br>
             <a href="#6">Version 1.5</a><br>
@@ -39,6 +46,13 @@
         </div>
         <br>
         <p class="heading" style="font-size:30px; color:hsl(154, 50%, 25%);"><u><b>ISI HALAMAN</b></u></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>Version 1.8</b></p>
+        <p>Memperbagus design website, mengubah sebagian font teksnya, dan membuat kalkulator sederhana</p>
+        <div class="image">
+            <img src="progress/2024-05-24-2.png" width="500">
+            <img src="progress/2024-05-24.png" width="500">
+            <img src="progress/2024-03-29.png" width="500">
+        </div>
         <p class="heading" id="8" style="font-size: 25px"><b>Version 1.7</b></p>
         <p>Menambahkan halaman timeline dan updates, dan mengubah font menjadi 3 font yang berbeda</p>
         <!-- <div class="container2"> -->
